--- a/receitas/receitas.html
+++ b/receitas/receitas.html
@@ -5,20 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receitas</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="formatos.css">
+    <link rel="stylesheet" href="receitas.css">
 </head>
 <body>
     <!-- Área do menu -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="#">Meu Site</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="home.html">Página Inicial</a>
+                            <a class="nav-link" href="home.html">Home</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="receitas.html">Receitas</a>
@@ -35,40 +36,58 @@
     <!-- Área principal - Apresentação do conjunto de receitas -->
     <div class="container-fluid">
         <div class="row justify-content-center mt-5">
-            <div class="col-md-6">
-                <h1>Receitas</h1>
+            <div class="col-md-10">
 
-                <!-- Receita 1 -->
-                <div class="card" style="width: 200px;">
-                    <img src="receita1.jpg" class="card-img-top" alt="Foto da Receita 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Nome da Receita 1</h5>
-                        <hr>
-                        <p class="card-text">Ingredientes:</p>
-                        <p class="card-text">- Ingrediente 1</p>
-                        <p class="card-text">- Ingrediente 2</p>
-                        <hr>
-                        <p class="card-text">Modo de Preparo:</p>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, perspiciatis.</p>
+                <div class="row">
+                    <!-- Receita 1 -->
+                    <div class="col-md-4 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Arroz</h5>
+                                <img src="arroz.png" class="card-img-top" alt="Foto de um prato com arroz">
+                                <hr>
+                                <li> Arroz</li>
+                                <li> Alho</li>
+                                <hr>
+                                <p class="card-text">Refogue o alho, adicione o arroz e frite por alguns segundos, adicione água e sal, abaixe o fogo, tampe a panela, mas deixe uma abertura, espere a água secar, se o arroz ainda estiver duro adicione mais água e espere secar até ficar no ponto.</p>
+                            </div>
+                        </div>
                     </div>
-                </div>
 
-                <!-- Receita 2 -->
-                <div class="card" style="width: 200px;">
-                    <img src="receita2.jpg" class="card-img-top" alt="Foto da Receita 2">
-                    <div class="card-body">
-                        <h5 class="card-title">Nome da Receita 2</h5>
-                        <hr>
-                        <p class="card-text">Ingredientes:</p>
-                        <p class="card-text">- Ingrediente 1</p>
-                        <p class="card-text">- Ingrediente 2</p>
-                        <hr>
-                        <p class="card-text">Modo de Preparo:</p>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, perspiciatis.</p>
+                    <!-- Receita 2 -->
+                    <div class="col-md-4 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Feijão</h5>
+                                <img src="feijao.png" class="card-img-top" alt="Foto da Receita de Feijão">
+                                <hr>
+                                <li>Feijão</li>
+                                <li>Alho</li>
+                                <li>Cebola</li>
+                                <li>Sal</li>
+                                <hr>
+                                <p class="card-text">Cozinhe o feijão em água com sal. Em outra panela, refogue alho e cebola. Misture o feijão cozido ao refogado e deixe cozinhar por mais alguns minutos.</p>
+                            </div>
+                        </div>
                     </div>
-                </div>
 
-                <!-- Adicione mais receitas conforme necessário -->
+                    <!-- Receita 3 -->
+                    <div class="col-md-4 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Macarrão</h5>
+                                <img src="macarrao.png" class="card-img-top" alt="Foto da Receita de Macarrão">
+                                <hr>
+                                <li>Macarrão</li>
+                                <li>Molho de tomate</li>
+                                <li>Queijo ralado</li>
+                                <li>Sal</li>
+                                <hr>
+                                <p class="card-text">Cozinhe o macarrão em água fervente com sal até ficar al dente. Escorra e misture com o molho de tomate. Polvilhe queijo ralado por cima.</p>
+                            </div>
+                        </div>
+                    </div>
+
 
             </div>
         </div>
@@ -77,7 +96,7 @@
     <!-- Rodapé -->
     <footer class="mt-5">
         <div class="container">
-            <p class="text-center">&copy; 2024 Meu Site. Todos os direitos reservados.</p>
+            <p class="text-center">&copy; Jurema 2024</p>
         </div>
     </footer>
 
