added some folders

--- a/receitas/receitas.html
+++ b/receitas/receitas.html
@@ -44,7 +44,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">Arroz</h5>
-                                <img src="arroz.png" class="card-img-top" alt="Foto de um prato com arroz">
+                                <img src="media/arroz.png" class="card-img-top" alt="Foto de um prato com arroz">
                                 <hr>
                                 <li> Arroz</li>
                                 <li> Alho</li>
@@ -59,7 +59,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">Feijão</h5>
-                                <img src="feijao.png" class="card-img-top" alt="Foto da Receita de Feijão">
+                                <img src="media/feijao.png" class="card-img-top" alt="Foto da Receita de Feijão">
                                 <hr>
                                 <li>Feijão</li>
                                 <li>Alho</li>
@@ -76,7 +76,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">Macarrão</h5>
-                                <img src="macarrao.png" class="card-img-top" alt="Foto da Receita de Macarrão">
+                                <img src="media/macarrao.png" class="card-img-top" alt="Foto da Receita de Macarrão">
                                 <hr>
                                 <li>Macarrão</li>
                                 <li>Molho de tomate</li>
