--- a/receitas/home.html
+++ b/receitas/home.html
@@ -37,7 +37,7 @@
     <div class="container">
         <div class="row justify-content-center mt-5">
             <div class="col-md-6 text-center">
-                <h1><img src="logo.png" class="logotipo" alt="logotipo">Receitas da Tia Jurema</h1>
+                <h1><img src="media/logo.png" class="logotipo" alt="logotipo">Receitas da Tia Jurema</h1>
                 <p class="subtitle">Bem-vindo(a) ao site da Tia Jurema<br>Conheça deliciosas receitas para o dia a dia</p>
             </div>
         </div>
