--- a/receitas/cadastro.html
+++ b/receitas/cadastro.html
@@ -10,7 +10,7 @@
         }
     </style>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="formatos.css">
+    <link rel="stylesheet" href="style/formatos.css">
 </head>
 <body>
     <!-- Área do menu -->
