--- a/receitas/home.html
+++ b/receitas/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seu Título</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="formatos.css">
+    <link rel="stylesheet" href="style/formatos.css">
 </head>
 <body>
     <!-- Área do menu -->
