--- a/receitas/receitas.html
+++ b/receitas/receitas.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receitas</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="formatos.css">
-    <link rel="stylesheet" href="receitas.css">
+    <link rel="stylesheet" href="style/formatos.css">
+    <link rel="stylesheet" href="style/receitas.css">
 </head>
 <body>
     <!-- Área do menu -->
