--- a/receitas/cadastro.html
+++ b/receitas/cadastro.html
@@ -90,13 +90,14 @@
                 </form>
             </div>
             <div class="col-md-0">
-                <button type="submit" class="btn btn-primary float-right">Cadastrar</button>
+                <button class="btn btn-primary float-right" type="submit"
+                style="width:120px; position: relative; top: 25px; ">Cadastrar</button>
             </div>
         </div>
     </div>
 
     <!-- Rodapé -->
-    <footer class="mt-5">
+    <footer class="mt-5 fixed-bottom">
         <div class="container">
             <p class="text-center">&copy; Jurema 2024</p>
         </div>
