--- a/receitas/home.html
+++ b/receitas/home.html
@@ -44,7 +44,7 @@
     </div>
 
     <!-- Rodapé -->
-    <footer class="mt-5">
+    <footer class="mt-5 fixed-bottom">
         <div class="container">
             <p class="text-center">&copy; Jurema 2024</p>
         </div>
